# lkbuild

./: README.md  action.yaml  boot-env.yml  conda-lock.yml  meta.yaml  pyproject.toml  tasks.py
actions/report-test-results/: action.yaml
actions/save-test-results/: action.yaml
actions/setup-conda-env/: action.yaml  conda-lock.yml  conda-platform.ps1
actions/setup-env/: action.yaml
actions/setup-vanilla-env/: action.yaml
lkbuild/: __init__.py  tasks.py
