[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lenskit-build-helpers"
authors = [
    {name = "Michael Ekstrand", email = "michaelekstrand@boisestate.edu"}
]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">= 3.7"
dynamic = ['version', 'description']
dependencies = [
    "flit >=3.2,<4",
    "requests ==2.*",
    "invoke ==2.*",
    "pip",
    "conda-lock >=2.2",
]

[project.scripts]
lkbuild = "lkbuild:lkbuild_main"

[tool.flit.module]
name = "lkbuild"

[tool.flit.sdist]
exclude = [
    "actions/"
]

[tool.conda-lock]
channels = [
    "conda-forge",
]
platforms = [
    "linux-64",
    "win-64",
    "osx-64",
    "osx-arm64",
]

[tool.conda-lock.dependencies]
python = "=3.10"
mamba = "*"
